--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,49 +5,29 @@
   <%= @event.name %>
 </h1>
 
-<h2><%= t(@event.status, :scope => "event.status") %></h2>
+<!-- Event Status -->
+<h2>
+  <label class="label label-default mr10">
+    <%= t(@event.status, :scope => "event.status") %>
+  </label>
 
-<h2><%= @event.category.try(:name) %></h2>
+  <label class="label label-default mr10">
+    <%= @event.category.try(:name) %>
+  </label>
+</h2>
 
 <!-- Event Images -->
 <h2>Event Images</h2>
-<% if @event.images.present? %>
+<%= render "event_images" %>
 
-  <% @event.images.each_with_index do |image, i| %>
-    <!-- Trigger the modal with a button -->
-    <span href="" data-toggle="modal" data-target="#myModal">
-      <%= image_tag(image.url, :class => "img-toggle thumbnail thumbnail-sm", :style => "display: inline; cursor: pointer;") %>
-    </span>
-  <% end %>
-
-  <!-- Modal -->
-  <div id="myModal" class="modal fade event-images" role="dialog">
-    <div class="modal-dialog">
-
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header text-center">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title" style="display: block;"><%= @event.name %></h4>
-        </div>
-        <div class="modal-body">
-          <image id="img-modal" class="image-response" src=""/>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-
-    </div>
-  </div>
-<% end %>
-
+<!-- Event Attachments -->
 <h2>Attachments</h2>
-  <% @event.attachments.each do |a| %>
-    <%= link_to image_tag(a.attachment.url(:small), :class => "event-attachment"), a.attachment.url, :target => "_blank" %>
-  <% end %>
-<hr>
-<%= sanitize @event.description %>
+<%= render "event_attachments" %>
+
+<% if @event.description.present? %>
+  <hr>
+  <%= sanitize @event.description %>
+<% end %>
 
 <hr>
 <p><%= link_to "开始报名", new_event_registration_path(@event), :class => "btn btn-primary" %></p>
