--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,13 +5,13 @@
   <%= @event.name %>
 </h1>
 
-<!-- Event Status -->
+<!-- Event Status & Category -->
 <h2>
-  <label class="label label-default mr10">
+  <label class="label label-default mgr10">
     <%= t(@event.status, :scope => "event.status") %>
   </label>
 
-  <label class="label label-default mr10">
+  <label class="label label-default mgr10">
     <%= @event.category.try(:name) %>
   </label>
 </h2>
