--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -7,8 +7,17 @@
 }
 
 // common margin setup
-.mr10 { margin-right: 10px; }
-.ml10 { margin-left: 10px; }
+.mg10 { margin: 10px; }
+.mgr10 { margin-right: 10px; }
+.mgl10 { margin-left: 10px; }
+.mgt10 { margin-top: 10px; }
+.mgb10 { margin-bottom: 10px; }
+
+// center element
+.center {
+  display: block;
+  margin: 0 auto;
+}
 
 // common styles for thumbnail
 .thumbnail-sm {
