--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -5,7 +5,7 @@
   <%= render :partial => "form", :locals => { :f => f } %>
   <hr>
   <div class="form-group">
-    <%= f.submit "Update", :class => "btn btn-success btn-lg" %>
+    <%= f.submit "Update", :class => "btn btn-primary btn-lg" %>
     <%= link_to "Cancel", admin_events_path %>
   </div>
 <% end %>
