--- a/app/views/admin/event_registrations/index.html.erb
+++ b/app/views/admin/event_registrations/index.html.erb
@@ -5,43 +5,11 @@
 </p>
 
 <div class="submenu">
-  <div class="btn-group">
-    <%= link_to "Status: ", "#", :class => "btn btn-success disabled" %>
-    <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters( :status => nil )),
-                :class => "btn btn-success #{(params[:status].blank?) ? "active" : ""}" %>
-    <% Registration::STATUS.each do |s| %>
-      <%= link_to t(s, :scope => "registration.status") + " (#{@event.registrations.by_status(s).size})",
-                  admin_event_registrations_path(registration_filters( :status => s )),
-                  :class => "btn btn-success #{( params[:status] == s) ? "active" : ""}" %>
-    <% end %>
-  </div>
-
-  <div class="btn-group">
-    <%= link_to "Ticket: ", "#", :class => "btn btn-default disabled" %>
-    <%= link_to "全部 (#{@event.registrations.size})", admin_event_registrations_path(registration_filters( :ticket_id => nil )),
-                :class => "btn btn-default #{(params[:ticket_id].blank?) ? "active" : ""}" %>
-                <% @event.tickets.each do |t| %>
-    <%= link_to t.name + " (#{@event.registrations.by_ticket(t).size})",
-                admin_event_registrations_path(registration_filters( :ticket_id => t.id )),
-                :class => "btn btn-default #{(params[:ticket_id].to_i == t.id) ? "active" : ""}" %>
-    <% end %>
-  </div>
+  <%= render "submenu" %>
 </div>
 
 <%= search_form_for @q, :url => admin_event_registrations_path(@event) do |f| %>
-
-  <p><%= f.search_field :name_cont, :placeholder => "姓名", :class => "form-control" %></p>
-  <p><%= f.search_field :email_cont, :placeholder => "E-mail", :class => "form-control" %></p>
-  
-  <p><%= text_field_tag :registration_id, params[:registration_id], :placeholder => "报名编号，可用“,”号区隔", :class => "form-control" %></p>
-
-  <p>报名日期：<%= date_field_tag :start_on, params[:start_on] %>～<%= date_field_tag :end_on, params[:end_on] %> </p><!-- NOTE name: :end_on, value: params[:end_on] -->
-
-
-  <p class="text-right">
-    <%= submit_tag t("admin.submit_filter"), :class => "btn btn-primary" %>
-  </p>
-
+  <%= render :partial => "search_field", :locals => { :f => f } %>
 <% end %>
 
 <table class="table">
@@ -54,20 +22,7 @@
     <th>Created_at</th>
     <th>Actions</th>
   </tr>
-  <% @registrations.each do |r| %>
-    <tr>
-      <td><%= r.id %></td>
-      <td><%= r.ticket.name %></td>
-      <td><%= r.name %></td>
-      <td><%= t(r.status, :scope => "registration.status") %></td>
-      <td><%= r.email %></td>
-      <td><%= r.created_at %></td>
-      <td>
-        <%= link_to "Edit", edit_admin_event_registration_path(@event, r), :class => "btn btn-default" %>
-        <%= link_to "Delete", admin_event_registrations_path(@event, r), :method => :delete, :data => { :confirm => "Are you sure?"}, :class => "btn btn-danger" %>
-      </td>
-    </tr>
-  <% end %>
+  <%= render :partial => "registration_item", :collection => @registrations, :as => :r %>
 </table>
 
 <%= @registrations_count %>
