--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -12,23 +12,7 @@
 <% end %>
 
 <%= form_for [:admin, @user] do |f| %>
-
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.text_field :email, :class => "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :group_ids %>
-    <!-- <%= f.collection_check_boxes(:group_ids, Group.all, :id, :name) %> -->
-    <%= f.select :group_ids, Group.all.map{ |g| [g.name, g.id] }, {}, :multiple => true, :class => "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit "Update", :class => "btn btn-primary" %>
-    <%= link_to "Cancel", admin_users_path %>
-  </div>
-
+  <%= render :partial => "form", :locals => { :f => f } %>
 <% end %>
 
 <script type="text/javascript">
