--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,71 +12,7 @@
 <% end %>
 
 <%= form_for @user do |f| %>
-
-  <div class="form-group">
-    <%= f.label :time_zone %>
-    <%= f.time_zone_select :time_zone %>
-  </div>
-
-  <div class="form-group">
-    <p>
-      <%= f.label :logo %>
-      <%= f.file_field :logo, :class => "form-control" %>
-    </p>
-
-    <% if @user.logo.present? %>
-      <%= link_to image_tag(@user.logo.url(:small), :class => "thumbnail", :style => "display: inline;"), @user.logo.url, :target => "_blank" %>
-
-      <p>
-        <label>
-          <%= f.check_box :remove_logo %> 移除图片
-          <%= f.object.logo.filename %>
-        </label>
-      </p>
-    <% end %>
-  </div>
-
-  <%= f.fields_for :profile do |ff| %>
-    <div class="form-group">
-      <%= ff.label :legal_name %>
-      <%= ff.text_field :legal_name, :class => "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= ff.label :birthday %>
-      <%= ff.text_field :birthday, :class => "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= ff.label :location %>
-      <%= ff.text_field :location, :class => "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= ff.label :education %>
-      <%= ff.text_field :education, :class => "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= ff.label :occupation %>
-      <%= ff.text_field :occupation, :class => "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= ff.label :bio %>
-      <%= ff.text_area :bio, :class => "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= ff.label :specialty %>
-      <%= ff.text_area :specialty, :class => "form-control" %>
-    </div>
-  <% end %>
-
-  <div class="form-group">
-     <%= f.submit "Save", :class => "btn btn-primary" %>
-  </div>
-
+  <%= render :partial => "form", :locals => { :f => f } %>
 <% end %>
 
 <script type="text/javascript">
