--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -7,95 +7,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-datepicker3";
-@import "event";  // file for Event model
+@import "event";
 @import "common";
-
-// website common styles
-body {
-  a {
-    color: #03A9F4;
-    text-decoration: none;
-  }
-
-  a:hover,
-  a:active {
-    color: #0288D1;
-    text-decoration: none;
-  }
-
-}
-
-// styles for navbar
-nav.navbar.navbar-inverse {
-
-  // styles for navbar links
-  a, a:hover {
-    color: #fff;
-  }
-
-  // styles for navbar link:selected
-  div.navbar-header > span.selected > a,
-  #navbar > ul:nth-child(1) > li.selected > a ,
-  #navbar > ul.nav.navbar-nav.navbar-right > li.selected> a,
-  #navbar > ul.nav.navbar-nav.navbar-right > li.dropdown.open > a {
-    background-color: #1ecd97;
-    color: #fff;
-  }
-
-  #navbar > ul.nav.navbar-nav.navbar-right {
-
-  // styles for navbar user logo
-  li > a {
-    img {
-      border-radius: 15%;
-      width: 28px;
-      height: 28px;
-      margin: -14px 0;
-    }
-  }
-
-  //styles for dropdown-menu
-    li > ul {
-      top: 120%;
-      background-color: #222;
-
-      li > a {
-        color: #fff;
-      }
-      li > a:hover {
-        background-color: #1ecd97;
-        color: #fff;
-      }
-    }
-
-    li > ul::before {
-      content: "";
-      border-bottom: 10px solid #222;
-      border-right: 10px solid transparent;
-      border-left: 10px solid transparent;
-      position: absolute;
-      top: -10px;
-      right: 16px;
-      z-index: 1000;
-    }
-  }
-}
-
-// styles for admin/events/index
-.sortable .sortable_icon {
-  border: none;
-  color: #ECECEC;
-  font-size: 20px;
-  cursor: move;
-  padding-right: 10px;
-}
-
-.sortable .sortable_icon:hover{
-  color: #C9302C;
-}
-
-// styles for admin/event/registrations/index
-
-.submenu {
-  margin-bottom: 10px;
-}
+@import "footer";
+@import "navbar";
+@import "admin/event_attachments";
+@import "admin/event_registrations";
