--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -13,12 +13,6 @@
 .mgt10 { margin-top: 10px; }
 .mgb10 { margin-bottom: 10px; }
 
-// center element
-.center {
-  display: block;
-  margin: 0 auto;
-}
-
 // common styles for thumbnail
 .thumbnail-sm {
   height: 50px;
@@ -26,6 +20,18 @@
 
 .thumbnail-md {
   height: 200px;
+}
+
+// styles for website links
+a {
+  color: #03A9F4;
+  text-decoration: none;
+}
+
+a:hover,
+a:active {
+  color: #0288D1;
+  text-decoration: none;
 }
 
 // style for bootstrap modal userd for showing big image
@@ -56,36 +62,3 @@
       height: 400px;
     }
   }
-
-// start of styles for footer to bottom
-html,
-body {
-  margin:0;
-  padding:0;
-  height:100%;
-}
-
-#wrapper {
-  min-height:100%;
-  position:relative;
-}
-
-#content {
-  padding-bottom:100px; /* Height of the footer element */
-}
-
-#footer {
-  background-color: #e5e5e5;
-  width:100%;
-  height:100px;
-  position:absolute;
-  bottom:0;
-  left:0;
-
-  // center links in footer
-  div.links > a {
-    margin: 40px;
-    display: inline-block;
-  }
-}
-// start of styles for footer to bottom
