--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,39 +33,10 @@
 <p><%= link_to "开始报名", new_event_registration_path(@event), :class => "btn btn-primary" %></p>
 
 <!-- Event Comment Section -->
+<%= render "event_comments/form" %>
 
-<div class="panel panel-info">
-  <div class="panel-body bg-info">
-    <%= form_for @comment, url: event_comments_path(@event), method: :post do |f| %>
-      <div class="form-group">
-        <%= f.text_area :body, class: "form-control" %>
-      </div>
-
-      <%= f.submit class: "btn btn-primary" %>
-    <% end %>
-  </div>
-</div>
-
-<% if @event.comments.present? %>
-  <% @event.comments.each do |comment| %>
-    <div class="well well-sm">
-      <div class="media">
-        <div class="media-left">
-          <% if comment.user.logo.present? %>
-            <%= image_tag(comment.user.logo.url(:thumb), class: "thumbnail thumbnail-sm") %>
-          <% else %>
-            <img src="<%= image_url 'default_user_logo.png' %>" alt="user logo" class: "thumbnail thumbnail-sm">
-          <% end %>
-        </div>
-        <div class="media-body">
-          <h4 class="media-heading"><%= comment.user.display_name %></h4>
-          <p class="text-muted"><%= comment.created_at.to_s(:long) %></p>
-          <p><%= simple_format comment.body %></p>
-        </div>
-        </div>
-    </div>
-  <% end %>
-<% end %>
+<!-- @event.comments index -->
+<%= render partial: "event_comments/comment", collection: @comments, as: :comment %>
 
 
 <script>
