--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm">
+<div class="well well-sm well-comment">
   <div class="tab-content">
 
     <div id="comment-<%= comment.id %>" class="tab-pane fade in active">
@@ -27,7 +27,9 @@
           <% end %>
         </div>
         <div class="media-body">
-          <h4 class="media-heading"><%= comment.user.display_name %></h4>
+          <h4 class="media-heading">
+            <%= comment.user.display_name %>
+          </h4>
           <p class="text-muted"><%= comment.created_at.to_s(:long) %></p>
           <p><%= simple_format comment.body %></p>
         </div>
@@ -38,6 +40,7 @@
 
     </div>
     <div id="edit-<%= comment.id %>" class="tab-pane fade">
+      <!-- <%= render "event_comments/form", form_edit_form: true %> -->
       <%= form_for comment, url: event_comment_path(@event,comment), method: :put do |f| %>
         <div class="form-group">
           <%= f.text_area :body, class: "form-control" %>
@@ -46,18 +49,18 @@
         <%= f.submit "Submit", class: "btn btn-primary btn-xs" %>
       <% end %>
     </div>
-
-
   </div>
-  <p>
-    <ul class="nav nav-pills">
-      <li class="active" ><a data-toggle="pill" href="#comment-<%= comment.id %>">show</a></li>
-      <li><a data-toggle="pill" href="#reply-<%= comment.id %>">reply</a></li>
-      <% if current_user && comment.user == current_user %>
-        <li><a data-toggle="pill" href="#edit-<%= comment.id %>">edit</a></li>
-        <li><%= link_to "delete", event_comment_path(@event,comment), method: :delete %></li>
-      <% end %>
-    </ul>
-  </p>
 
+  <% if comment.leaf? %>
+    <p><small class="text-muted text-success">还没有人回复--来互动一下！</small></p>
+  <% end %>
+
+  <ul class="nav nav-pills">
+    <li class="active" ><a data-toggle="pill" href="#comment-<%= comment.id %>">show</a></li>
+    <li><a data-toggle="pill" href="#reply-<%= comment.id %>">reply</a></li>
+    <% if current_user && comment.user == current_user %>
+      <li><a data-toggle="pill" href="#edit-<%= comment.id %>">edit</a></li>
+      <li><%= link_to "delete", event_comment_path(@event,comment), method: :delete %></li>
+    <% end %>
+  </ul>
 </div>
